npm package name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testlibrary",
+  "name": "mousinho-testlibrary-mse-2103",
   "version": "1.0.0",
   "description": "Antony Mousinho's self built test library",
   "main": "library.js",
