--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mousinho-testlibrary-mse-2103",
-  "version": "1.0.0",
+  "version": "1.0.`",
   "description": "Antony Mousinho's self built test library",
   "main": "library.js",
   "scripts": {
